public/css/main.scss
@import "./variables";

body {
	font-family: "Inter", sans-serif;
}

.dark-theme {
	&-desaturated {
		color: $desaturated-blue !important;
	}

	&-white {
		color: #fff !important;
	}

	&-background {
		background: $dark-theme-background !important;
	}

	&-header-background {
		background-color: $dark-theme-header-background !important;
	}

	&-card-background {
		background-color: $dark-theme-card-background !important;
	}

	&-slider-active {
		transform: translateX(-26px) !important;
		background-color: $dark-theme-background !important;
	}

	&-slider-background {
		background: $light-toggle !important;
	}
}

.container {
	padding: 0 2rem 2rem;
	margin-top: 10rem;
	z-index: 10;
	position: relative;

	@include sm {
		max-width: 1400px;
		margin: 8rem auto;
	}
}

.success {
	color: $lime-green;
}

.failure {
	color: $bright-red;
}

@import "./header";

@import "./big-cards";

@import "./_overview.scss";

.card {
}

@import "./footer";

